UI : Table Action button alignment issue

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -246,6 +246,10 @@ hr {
     margin-bottom: 1rem !important;
 }
 
+.w-8{
+    width: 8%;
+}
+
 .w-10{
     width: 10%;
 }
